feat: finalizando modulo de pessoas
