# src/domain/models/createPessoaResponse.ts
@@ -9,11 +9,9 @@
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
+import { Pessoa } from "./pessoa";
 
-export interface PessoaResponseDto {
-  id: string;
-  nome: string;
-  ativo: boolean;
-  email: string;
-  createdAt: string;
+export interface CreatePessoaResponse {
+  message: string;
+  data: Pessoa;
 }
